# sopkit.github.io

./: .biomeignore  .env.example  .gitignore  .gitmodules  ACTION-PLAN.md  CONTRIBUTING.md  FULL-AUDIT-REPORT.md  GROWTH_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  NPM_ECOSYSTEM.md  README.md  SEO_IMPROVEMENT_ROADMAP.md  TODO.md  TRAFFIC_GROWTH_PLAN.md  analyze_tools.cjs  analyze_tools.py  biome.json  codebase-scan.md  components.json  deep-research-report-more-tools.md  earn-tools.md  eslint.config.mjs  index.html  n.md  next-sitemap.config.js  next.config.mjs  open-next.config.ts  package-lock.json  package.json  pre-flight-report.json  seo-improvement-tracker.md  sitemap.xml  skills-lock.json  style.css  submit-urls.js  submit-urls.mjs  tailwind.config.js  text.md  tool_analysis.txt  (+14 more)
ecc/: .env.example  .gitignore  .markdownlint.json  .mcp.json  .npmignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMANDS-QUICK-REF.md  CONTRIBUTING.md  EVALUATION.md  README.md  README.zh-CN.md  REPO-ASSESSMENT.md  RULES.md  SECURITY.md  SOUL.md  SPONSORS.md  TROUBLESHOOTING.md  WORKING-CONTEXT.md  agent.yaml  ecc_dashboard.py  eslint.config.js  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  the-longform-guide.md  the-security-guide.md  the-shortform-guide.md
ecc/.claude-plugin/: PLUGIN_SCHEMA_NOTES.md  README.md  marketplace.json  plugin.json
ecc/.codebuddy/: README.md  README.zh-CN.md  install.js  install.sh  uninstall.js  uninstall.sh
ecc/.codex/: AGENTS.md  config.toml
ecc/.codex-plugin/: README.md  plugin.json
ecc/.cursor/: hooks.json
ecc/.gemini/: GEMINI.md
ecc/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
ecc/.kiro/: README.md  install.sh
ecc/.opencode/: MIGRATION.md  README.md  index.ts  opencode.json  package.json  tsconfig.json
ecc/.qwen/: QWEN.md
ecc/.trae/: README.md  README.zh-CN.md  install.sh  uninstall.sh
ecc/.zed/: settings.json
ecc/agents/: performance-optimizer.md
ecc/commands/: cost-report.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  pm2.md  pr.md  quality-gate.md
ecc/config/: project-stack-mappings.json
ecc/docs/: ANTIGRAVITY-GUIDE.md  ARCHITECTURE-IMPROVEMENTS.md  COMMAND-AGENT-MAP.md  COMMAND-REGISTRY.json  ECC-2.0-GA-ROADMAP.md  ECC-2.0-REFERENCE-ARCHITECTURE.md  ECC-2.0-SESSION-ADAPTER-DISCOVERY.md  HERMES-OPENCLAW-MIGRATION.md  HERMES-SETUP.md  JOYCODE-GUIDE.md  MANUAL-ADAPTATION-GUIDE.md  MEGA-PLAN-REPO-PROMPTS-2026-03-12.md  PHASE1-ISSUE-BUNDLE-2026-03-12.md  PLAN-PRD-PATTERN.md  PR-399-REVIEW-2026-03-12.md  PR-QUEUE-TRIAGE-2026-03-13.md  QWEN-GUIDE.md  SELECTIVE-INSTALL-ARCHITECTURE.md  SELECTIVE-INSTALL-DESIGN.md  SESSION-ADAPTER-CONTRACT.md  SKILL-DEVELOPMENT-GUIDE.md  SKILL-PLACEMENT-POLICY.md  TROUBLESHOOTING.md  capability-surface-selection.md  hook-bug-workarounds.md  legacy-artifact-inventory.md  skill-adaptation-policy.md  stale-pr-salvage-ledger.md  token-optimization.md
ecc/ecc2/: Cargo.toml  README.md
ecc/examples/: CLAUDE.md  harmonyos-app-CLAUDE.md  hud-status-contract.json  laravel-api-CLAUDE.md  statusline.json
ecc/hooks/: README.md  hooks.json
(+3706 files in other folders)
