[package]
name = "ecc-tui"
version = "0.1.0"
edition = "2021"
description = "ECC 2.0 — Agentic IDE control plane with TUI dashboard"
license = "MIT"
authors = ["Affaan Mustafa <me@affaanmustafa.com>"]
repository = "https://github.com/affaan-m/ECC"

[features]
default = ["vendored-openssl"]
vendored-openssl = ["git2/vendored-openssl"]

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# State store
rusqlite = { version = "0.32", features = ["bundled"] }

# Git integration
git2 = { version = "0.20", features = ["ssh"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Directory paths
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
